<resources>
    <string name="app_name">CameraReader</string>
    <string name="launch_camera_button_text">Launch Camera</string>
    <string name="response_title_text">Response</string>
    <string name="request_error_message">Error getting the data</string>
    <string name="product_image_description">Product Image</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="left_arrow">⤆</string>
    <string name="addtolist_button_text">Añadir a la Lista</string>
    <string name="insert_code">Insert Code</string>
    <string name="theme_changer">Theme Changer</string>
    <string name="app_title">CoreFridged</string>
    <string name="code_insert_hint">Insert Code Here</string>
    <string name="search_item_code_button">Search Item</string>
    <string name="insert_code_title">Insert Item Code Below</string>
    <string name="product_list_title">Product List</string>
    <string name="total_text">Total</string>
    <string name="money_placeholder">Comprar 00.00€</string>
    <string name="product_placeholder">Product 1</string>
</resources>