<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".insertCode">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_code_title"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/insertCode_EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/code_insert_hint" />

        <Button
            android:id="@+id/insertCode_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_item_code_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>